[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools"]

[project]
authors = [
  {email = "matiasaguirre@gmail.com", name = "Matias Aguirre"},
  {email = "search5@gmail.com", name = "Lee Ji-ho"}
]
classifiers = [
  'Development Status :: 4 - Beta',
  'Environment :: Web Environment',
  'Intended Audience :: Developers',
  'License :: OSI Approved :: BSD License',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.11',
  'Programming Language :: Python :: 3.12',
  'Programming Language :: Python :: 3.7',
  'Programming Language :: Python :: 3.8',
  'Programming Language :: Python :: 3.9',
  'Programming Language :: Python',
  'Topic :: Internet'
]
dependencies = [
  "six",
  "social-auth-core>=1.0.0",
  "sqlalchemy"
]
description = 'Python Social Authentication, SQLAlchemy storage.'
dynamic = ["version"]
keywords = ["social auth", "sqlalchemy"]
license = {text = 'BSD'}
name = 'social-auth-storage-sqlalchemy'
readme = "README.md"
requires-python = ">= 3.7"

[project.urls]
Changelog = 'https://github.com/python-social-auth/social-storage-sqlalchemy/blob/master/CHANGELOG.md'
Documentation = 'http://python-social-auth.readthedocs.org'
Issues = 'https://github.com/python-social-auth/social-storage-sqlalchemy/issues'
Repository = 'https://github.com/python-social-auth/social-storage-sqlalchemy'

[tool.flake8]
# Ignore some well known paths
exclude = ['*.egg', '.tox', '.venv', 'build', 'db/env.py', 'db/versions/*.py', 'dist', 'doc', 'Pipfile', 'Pipfile.lock', 'site']
max-line-length = 80

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "social_sqlalchemy.__version__"}

[tool.setuptools.packages]
find = {}

[tool.tomlsort]
ignore_case = true
sort_inline_arrays = true
sort_inline_tables = true
sort_table_keys = true
spaces_before_inline_comment = 2
